<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<version>3.0.0-SNAPSHOT</version>
	<groupId>io.cucumber.eclipse</groupId>
	<artifactId>parent</artifactId>
	<packaging>pom</packaging>
	<name>Cucumber Eclipse Parent</name>

	<properties>
		<maven-scm-plugin-version>2.2.1</maven-scm-plugin-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
    	<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<modules>
		<module>io.cucumber.eclipse.targetdefinition</module>
		<module>io.cucumber.eclipse.editor</module>
		<module>io.cucumber.eclipse.java</module>
		<module>io.cucumber.eclipse.java.plugins</module>
		<module>io.cucumber.eclipse.jackson</module>
		<module>io.cucumber.eclipse.python</module>
		<module>io.cucumber.eclipse.feature</module>
<!--		<module>io.cucumber.eclipse.product</module>-->
		<module>io.cucumber.eclipse.updatesite</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<file>../io.cucumber.eclipse.targetdefinition/cucumber.eclipse.targetdefinition.target</file>
					</target>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
					<dependency-resolution>
					     <localArtifacts>ignore</localArtifacts>
					</dependency-resolution>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho-version}</version>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-repository-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<finalName>cucumber-eclipse-plugin-${project.version}</finalName>
					<includeAllDependencies>true</includeAllDependencies>
					<skipArchive>true</skipArchive>
					<includeAllSources>true</includeAllSources>
					<addIUTargetRepositoryReferences>true</addIUTargetRepositoryReferences>
					<addPomRepositoryReferences>true</addPomRepositoryReferences>
					<filterProvided>true</filterProvided>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>				
				<configuration>
					<useUIHarness>true</useUIHarness>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<preparationGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:${maven-scm-plugin-version}:add org.apache.maven.plugins:maven-scm-plugin:${maven-scm-plugin-version}:checkin</preparationGoals>
					<completionGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:${maven-scm-plugin-version}:add org.apache.maven.plugins:maven-scm-plugin:${maven-scm-plugin-version}:checkin</completionGoals>
				</configuration>
			</plugin>
			<plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-scm-plugin</artifactId>
				<version>${maven-scm-plugin-version}</version>
				 <executions>
					<execution>
						<id>default-cli</id>
						<goals>
							<goal>add</goal>
							<goal>checkin</goal>
						</goals>
						<configuration>
							<includes>**/META-INF/MANIFEST.MF,**/feature.xml,**/*.product,**/category.xml</includes>
							<excludes>**/target/**</excludes>
						<message>[maven-scm-plugin] Changing the version to reflect the pom versions for the release</message>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-surefire-plugin</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<argLine>-XstartOnFirstThread</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<scm>
		<connection>scm:git:https://github.com/qvdk/cucumber-eclipse.git</connection>
		<developerConnection>scm:git:https://github.com/qvdk/cucumber-eclipse.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>
</project>
